# app/Http/Controllers/CustomerController.php
@@ -2,11 +2,15 @@
 
 namespace App\Http\Controllers;
 
+use App\Exports\FailedCustomersExport;
 use App\Http\Requests\CreateCustomerRequest;
 use App\Http\Requests\UpdateCustomerRequest;
+use App\Imports\CustomersImport;
 use App\Models\Customer;
+use Carbon\Carbon;
 use Illuminate\Http\Request;
 use Inertia\Inertia;
+use Maatwebsite\Excel\Facades\Excel;
 
 class CustomerController extends Controller
 {
@@ -19,10 +23,10 @@ class CustomerController extends Controller
     {
         $customers = Customer::query();
         if ($request->has('keyword')) {
-            $customers = $customers->where('first_name','like','%' . $request->keyword . '%')
-                ->orWhere('last_name','like','%' . $request->keyword . '%')
-                ->orWhere('email','like','%' . $request->keyword . '%')
-                ->orWhere('phone_number','like','%' . $request->keyword . '%');
+            $customers = $customers->where('first_name', 'like', '%' . $request->keyword . '%')
+                ->orWhere('last_name', 'like', '%' . $request->keyword . '%')
+                ->orWhere('email', 'like', '%' . $request->keyword . '%')
+                ->orWhere('phone_number', 'like', '%' . $request->keyword . '%');
         }
         $customers = $customers->paginate(10);
         return Inertia::render('Customers', [
@@ -38,12 +42,28 @@ class CustomerController extends Controller
      */
     public function store(CreateCustomerRequest $createCustomerRequest)
     {
-        Customer::create([
-            'first_name' => $createCustomerRequest['first_name'],
-            'last_name' => $createCustomerRequest['last_name'],
-            'email' => $createCustomerRequest['email'],
-            'phone_number' => $createCustomerRequest['phone_number'],
-        ]);
+
+        // Process bulk files if exists
+        if ($createCustomerRequest->hasFile('bulk')) {
+            $import = new CustomersImport();
+            $import->import($createCustomerRequest->file('bulk'));
+            if ($import->failures()->count() > 0) {
+                $file_name = strtotime(Carbon::now());
+                $this->createFailedCustomersListExcel($import->failures(), $file_name);
+                $msg = "One or more customer details had errors while adding. <a href='failed-customers/$file_name.xlsx' style='color: #1d68a7 !important;'>Click here</a> to download detailed report.";
+                return redirect()->back()->withErrors($msg);
+            }
+        }
+
+        // Process form data if exists
+        if (!empty($createCustomerRequest['email'])) {
+            Customer::create([
+                'first_name' => $createCustomerRequest['first_name'],
+                'last_name' => $createCustomerRequest['last_name'],
+                'email' => $createCustomerRequest['email'],
+                'phone_number' => $createCustomerRequest['phone_number'],
+            ]);
+        }
 
         return redirect()->back()->with('message', 'Customer Created Successfully.');
     }
@@ -77,7 +97,7 @@ class CustomerController extends Controller
     {
         if ($request->has('id')) {
             Customer::find($request->input('id'))->delete();
-            return redirect()->back();
+            return redirect()->back()->with('message', 'Customer Deleted Successfully.');
         }
     }
 
@@ -92,5 +112,36 @@ class CustomerController extends Controller
         return Inertia::render('Dashboard', [
             'customerCount' => $customerCount
         ]);
+    }
+
+    /**
+     * This will create excel file of failed customers list.
+     *
+     * @return array|\Inertia\Response|string|string[]
+     */
+    public function createFailedCustomersListExcel($failures, $file_name)
+    {
+        $customers = collect();
+        if (!empty($failures) && $failures->count() > 0) {
+            foreach ($failures as $failure) {
+                $errors = implode(" ", $failure->errors());
+                $customer = $failure->values()['email'];
+                $customers->push([$customer, $errors]);
+            }
+        }
+
+        $filePath = "failed_customers/$file_name.xlsx";
+        Excel::store(new FailedCustomersExport($customers), $filePath);
+        return str_replace('failed_customers/', '', $filePath);
+    }
+
+    /**
+     * This will initiate the download of the failed customers list and will delete the file after downloaded.
+     *
+     * @return \Symfony\Component\HttpFoundation\BinaryFileResponse
+     */
+    public function downloadFailedCustomers($filePath)
+    {
+        return response()->download(storage_path() . '/app/failed_customers/' . $filePath)->deleteFileAfterSend();
     }
 }
